Fixed kill command usage. Added configurable command locations.